<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/s1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="22dp"
        android:text="@string/first_class"
        app:layout_constraintEnd_toStartOf="@+id/t1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/s2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="3dp"
        android:text="@string/second_class"
        app:layout_constraintEnd_toStartOf="@+id/t2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s1" />

    <TextView
        android:id="@+id/s3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:text="@string/third_class"
        app:layout_constraintEnd_toStartOf="@+id/t3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s2" />

    <TextView
        android:id="@+id/s4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="9dp"
        android:text="@string/fourth_class"
        app:layout_constraintEnd_toStartOf="@+id/t4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s3" />

    <TextView
        android:id="@+id/s5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="22dp"
        android:text="@string/fifth_class"
        app:layout_constraintEnd_toStartOf="@+id/t5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s4" />

    <Button
        android:id="@+id/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="105dp"
        android:width="200dp"
        android:onClick="processClick"
        android:text="@string/calculate_gpa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t5" />

    <EditText
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="7dp"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/s1"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/s2"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/s3"
        app:layout_constraintTop_toBottomOf="@+id/t2"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/t4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/s4"
        app:layout_constraintTop_toBottomOf="@+id/t3"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/t5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/s5"
        app:layout_constraintTop_toBottomOf="@+id/t4"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/GPADisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="107dp"
        android:text="@string/your_final_gpa_will_appear_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalcButton" />

    <TextView
        android:id="@+id/TitleTextView"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="132dp"
        android:text="@string/nick_c_s_gpa_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginTop="45dp"
        android:text="@string/grade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="45dp"
        android:text="@string/credits_earned"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView" />

    <EditText
        android:id="@+id/r1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/t1"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/r2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/t2"
        app:layout_constraintTop_toBottomOf="@+id/r1"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/r3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/t3"
        app:layout_constraintTop_toBottomOf="@+id/r2"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/r4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/t4"
        app:layout_constraintTop_toBottomOf="@+id/r3"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/r5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/t5"
        app:layout_constraintTop_toBottomOf="@+id/r4"
        android:autofillHints=""
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>